@@ -16,6 +16,8 @@ Pretty URLs 1.0RC                                              ???
  + Base: Prettify URLs in emails. (Subs-Post.php)
  ! Base: Don't let fix_possible_url() change any URLs. (News.php)
  ! Base: The previous changes needed a little more work. (News.php, PrettyUrls-Filters.php, Subs-Post.php)
+ ! Boards/Topics: Fix SMF bug #3418 (QueryString.php)
+ ! Boards/Topics: Always unset $_GET['pretty'] in SMF2. Never before. (QueryString.php)
 
 Pretty URLs 0.9                                                12 November, 2008
 ================================================================================
